// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildkite-graph Pipeline env dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
}
"
`;

exports[`buildkite-graph Pipeline env json 1`] = `
Object {
  "env": Object {
    "COLOR": "1",
  },
  "steps": Array [],
}
`;

exports[`buildkite-graph Pipeline env structure 1`] = `""`;

exports[`buildkite-graph Pipeline env yaml 1`] = `
"env:
  COLOR: '1'
steps: []
"
`;

exports[`buildkite-graph Pipeline steps dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<command>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Pipeline steps json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "command",
    },
  ],
}
`;

exports[`buildkite-graph Pipeline steps structure 1`] = `"* <command>"`;

exports[`buildkite-graph Pipeline steps yaml 1`] = `
"steps:
  - command: command
"
`;

exports[`buildkite-graph general serialization JSON serializer can stringify json 1`] = `
Object {
  "steps": Array [],
}
`;

exports[`buildkite-graph general serialization Structural serializer can stringify structure 1`] = `
"* Build Editor
* Test Editor
* [wait; continues on failure]
* Annotate failures
* Upload coverage
* [wait]
* Integration tests [x 8]
* [wait]
* :saucelabs: Integration tests [x 8]
* Visreg baseline update
* [wait; continues on failure]
* Annotate cucumber failures
* [wait]
* Copy to deploy bucket
* [wait]
* Update checkpoint
* Deploy to tech
* Deploy to usertesting
* [wait]
* [block for 'Release editor']"
`;

exports[`buildkite-graph general serialization complex dot 1`] = `
"digraph \\"web-build-editor\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"Build Editor\\" [ color = \\"grey\\" ];
  \\"Test Editor\\" [ color = \\"grey\\" ];
}

subgraph cluster_1 {
  graph [ color = \\"black\\" ];
  \\"Annotate failures\\" [ color = \\"grey\\" ];
  \\"Upload coverage\\" [ color = \\"grey\\" ];
  \\"Integration tests [x 8]\\" [ color = \\"grey\\" ];
}

subgraph cluster_2 {
  graph [ color = \\"black\\" ];
  \\":saucelabs: Integration tests [x 8]\\" [ color = \\"grey\\" ];
  \\"Visreg baseline update\\" [ color = \\"grey\\" ];
}

subgraph cluster_3 {
  graph [ color = \\"black\\" ];
  \\"Annotate cucumber failures\\" [ color = \\"grey\\" ];
  \\"Copy to deploy bucket\\" [ color = \\"grey\\" ];
}

subgraph cluster_4 {
  graph [ color = \\"black\\" ];
  \\"Update checkpoint\\" [ color = \\"grey\\" ];
  \\"Deploy to tech\\" [ color = \\"grey\\" ];
  \\"Deploy to usertesting\\" [ color = \\"grey\\" ];
}

subgraph cluster_5 {
  graph [ color = \\"black\\" ];
  \\"[block for 'Release editor']\\" [ color = \\"grey\\" ];
}

  \\"Test Editor\\";
  \\"Annotate failures\\";
  \\"Upload coverage\\";
  \\"Build Editor\\";
  \\"Integration tests [x 8]\\";
  \\":saucelabs: Integration tests [x 8]\\";
  \\"Visreg baseline update\\";
  \\"Annotate cucumber failures\\";
  \\"Copy to deploy bucket\\";
  \\"Update checkpoint\\";
  \\"Deploy to tech\\";
  \\"web-deploy\\" [ shape =Msquare ];
  \\"Deploy to usertesting\\";
  \\"[block for 'Release editor']\\";
  \\"Test Editor\\" -> \\"Annotate failures\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
  \\"Test Editor\\" -> \\"Upload coverage\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
  \\"Build Editor\\" -> \\"Integration tests [x 8]\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
  \\"Integration tests [x 8]\\" -> \\":saucelabs: Integration tests [x 8]\\" [ ltail = \\"cluster_1\\", lhead = \\"cluster_2\\" ];
  \\"Integration tests [x 8]\\" -> \\"Visreg baseline update\\" [ ltail = \\"cluster_1\\", lhead = \\"cluster_2\\" ];
  \\"Integration tests [x 8]\\" -> \\"Annotate cucumber failures\\" [ ltail = \\"cluster_2\\", lhead = \\"cluster_3\\" ];
  \\":saucelabs: Integration tests [x 8]\\" -> \\"Annotate cucumber failures\\" [ ltail = \\"cluster_2\\", lhead = \\"cluster_3\\" ];
  \\":saucelabs: Integration tests [x 8]\\" -> \\"Copy to deploy bucket\\" [ ltail = \\"cluster_2\\", lhead = \\"cluster_3\\" ];
  \\"Copy to deploy bucket\\" -> \\"Update checkpoint\\" [ ltail = \\"cluster_3\\", lhead = \\"cluster_4\\" ];
  \\"Copy to deploy bucket\\" -> \\"Deploy to tech\\" [ ltail = \\"cluster_3\\", lhead = \\"cluster_4\\" ];
  \\"Deploy to tech\\" -> \\"web-deploy\\" [ label = \\"triggers\\" ];
  \\"Copy to deploy bucket\\" -> \\"Deploy to usertesting\\" [ ltail = \\"cluster_3\\", lhead = \\"cluster_4\\" ];
  \\"Deploy to usertesting\\" -> \\"web-deploy\\" [ label = \\"triggers\\" ];
  \\"Update checkpoint\\" -> \\"[block for 'Release editor']\\" [ ltail = \\"cluster_4\\", lhead = \\"cluster_5\\" ];
}
"
`;

exports[`buildkite-graph general serialization complex json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "web/bin/buildkite/run_web_step.sh build editor",
      "label": "Build Editor",
    },
    Object {
      "command": "web/bin/buildkite/run_web_step.sh test editor",
      "label": "Test Editor",
    },
    Object {
      "continue_on_failure": true,
      "wait": null,
    },
    Object {
      "label": "Annotate failures",
      "plugins": Array [
        Object {
          "bugcrowd/test-summary#v1.5.0": Object {
            "inputs": Array [
              Object {
                "artifact_path": "web/target/htmllint-*.txt",
                "label": ":htmllint: HTML lint",
                "type": "oneline",
              },
            ],
          },
        },
        Object {
          "detect-clowns#v1.0.0": null,
        },
      ],
    },
    Object {
      "command": "web/bin/buildkite/run_web_step.sh deploy-report coverage editor",
      "label": "Upload coverage",
    },
    Object {
      "wait": null,
    },
    Object {
      "command": "web/bin/buildkite/run_web_step.sh run-integration-tests local editor chrome",
      "label": "Integration tests",
      "parallelism": 8,
    },
    Object {
      "wait": null,
    },
    Object {
      "command": "web/bin/buildkite/run_web_step.sh run-integration-tests saucelabs editor safari",
      "label": ":saucelabs: Integration tests",
      "parallelism": 8,
      "plugins": Array [
        Object {
          "sauce-connect-plugin": null,
        },
      ],
    },
    Object {
      "command": "web/bin/buildkite/run_web_step.sh run-visual-regression editor",
      "label": "Visreg baseline update",
    },
    Object {
      "continue_on_failure": true,
      "wait": null,
    },
    Object {
      "command": "web/bin/buildkite/run_web_step.sh annotate-cucumber-failed-cases",
      "label": "Annotate cucumber failures",
    },
    Object {
      "wait": null,
    },
    Object {
      "command": "web/bin/buildkite/run_web_step.sh copy-to-deploy-bucket editor",
      "label": "Copy to deploy bucket",
    },
    Object {
      "wait": null,
    },
    Object {
      "command": "production/test/jobs/advance_branch.sh \\"checkpoint/web/green/editor\\"",
      "label": "Update checkpoint",
    },
    Object {
      "build": Object {
        "env": Object {
          "FLAVOR": "tech",
          "RELEASE_PATH": "some/path/",
        },
      },
      "label": "Deploy to tech",
      "trigger": "web-deploy",
    },
    Object {
      "build": Object {
        "env": Object {
          "FLAVOR": "usertesting",
          "RELEASE_PATH": "some/path/",
        },
      },
      "label": "Deploy to usertesting",
      "trigger": "web-deploy",
    },
    Object {
      "wait": null,
    },
    Object {
      "block": "Release editor",
    },
  ],
}
`;

exports[`buildkite-graph general serialization complex structure 1`] = `
"* Build Editor
* Test Editor
* [wait; continues on failure]
* Annotate failures
* Upload coverage
* [wait]
* Integration tests [x 8]
* [wait]
* :saucelabs: Integration tests [x 8]
* Visreg baseline update
* [wait; continues on failure]
* Annotate cucumber failures
* [wait]
* Copy to deploy bucket
* [wait]
* Update checkpoint
* Deploy to tech
* Deploy to usertesting
* [wait]
* [block for 'Release editor']"
`;

exports[`buildkite-graph general serialization complex yaml 1`] = `
"steps:
  - label: Build Editor
    command: web/bin/buildkite/run_web_step.sh build editor
  - label: Test Editor
    command: web/bin/buildkite/run_web_step.sh test editor
  - wait: ~
    continue_on_failure: true
  - label: Annotate failures
    plugins:
      - 'bugcrowd/test-summary#v1.5.0':
          inputs:
            - label: ':htmllint: HTML lint'
              artifact_path: web/target/htmllint-*.txt
              type: oneline
      - 'detect-clowns#v1.0.0': ~
  - label: Upload coverage
    command: web/bin/buildkite/run_web_step.sh deploy-report coverage editor
  - wait: ~
  - label: Integration tests
    command: >-
      web/bin/buildkite/run_web_step.sh run-integration-tests local editor
      chrome
    parallelism: 8
  - wait: ~
  - label: ':saucelabs: Integration tests'
    command: >-
      web/bin/buildkite/run_web_step.sh run-integration-tests saucelabs editor
      safari
    parallelism: 8
    plugins:
      - sauce-connect-plugin: ~
  - label: Visreg baseline update
    command: web/bin/buildkite/run_web_step.sh run-visual-regression editor
  - wait: ~
    continue_on_failure: true
  - label: Annotate cucumber failures
    command: web/bin/buildkite/run_web_step.sh annotate-cucumber-failed-cases
  - wait: ~
  - label: Copy to deploy bucket
    command: web/bin/buildkite/run_web_step.sh copy-to-deploy-bucket editor
  - wait: ~
  - label: Update checkpoint
    command: production/test/jobs/advance_branch.sh \\"checkpoint/web/green/editor\\"
  - trigger: web-deploy
    label: Deploy to tech
    build:
      env:
        FLAVOR: tech
        RELEASE_PATH: some/path/
  - trigger: web-deploy
    label: Deploy to usertesting
    build:
      env:
        FLAVOR: usertesting
        RELEASE_PATH: some/path/
  - wait: ~
  - block: Release editor
"
`;

exports[`buildkite-graph general serialization simple dot 1`] = `
"digraph \\"web-deploy\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"Deploy\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph general serialization simple json 1`] = `
Object {
  "env": Object {
    "DEBUG": "true",
    "USE_COLOR": "1",
  },
  "steps": Array [
    Object {
      "command": "buildkite/deploy_web.sh",
      "label": "Deploy",
    },
  ],
}
`;

exports[`buildkite-graph general serialization simple structure 1`] = `"* Deploy"`;

exports[`buildkite-graph general serialization simple yaml 1`] = `
"env:
  USE_COLOR: '1'
  DEBUG: 'true'
steps:
  - label: Deploy
    command: buildkite/deploy_web.sh
"
`;

exports[`buildkite-graph missing transitive steps get added to the graph dot 1`] = `
"digraph \\"test\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<yarn>\\" [ color = \\"grey\\" ];
}

subgraph cluster_1 {
  graph [ color = \\"black\\" ];
  \\"<yarn test>\\" [ color = \\"grey\\" ];
}

  \\"<yarn>\\";
  \\"<yarn test>\\";
  \\"<yarn>\\" -> \\"<yarn test>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
}
"
`;

exports[`buildkite-graph missing transitive steps get added to the graph json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "yarn",
    },
    Object {
      "wait": null,
    },
    Object {
      "command": "yarn test",
    },
  ],
}
`;

exports[`buildkite-graph missing transitive steps get added to the graph structure 1`] = `
"* <yarn>
* [wait]
* <yarn test>"
`;

exports[`buildkite-graph missing transitive steps get added to the graph yaml 1`] = `
"steps:
  - command: yarn
  - wait: ~
  - command: yarn test
"
`;
